# 42sh

./: .gitignore  .gitlab-ci.yml  Doxyfile  Makefile.am  README.md  configure.ac  hey  main.c
src/: 42sh  42sh.c  42sh_fsanitize  42sh_gdb  Makefile.am  script3.sh  script4.sh  test.sh  test.txt
src/ast/: ast.c  ast.h
src/environment/: environment.c  environment.h
src/executable/: Makefile.am  builtins.h
src/executable/command/: Makefile.am
src/executable/command/builtins/: bool.c  builtins.h  echo.c
src/executable/environment/: Makefile.am  environment.c  environment.h  function.c  special_var.c  special_variable.c  variable.c
src/executable/execute_ast/: Makefile.am  execute.c  execute.h  execute_command.c  execute_condition.c  execute_loop.c  execute_pipe.c  execute_redir.c
src/executable/execute_ast/builtins/: Makefile.am  alias.c  bool.c  builtins.h  cd.c  dot.c  echo.c  exit.c  export.c  stop_loop.c  unset.c
src/executable/redirection/: Makefile.am  redir.c  redir.h
src/expansion/: Makefile.am  expansion.c  expansion.h
src/io_backend/: Makefile.am  io.c  io.h
src/lexer/: Makefile.am  lexer.c  lexer.h  lexer_rules.c  lexer_tools.c  main.c  token.c  token.h
src/logger/: Makefile.am  logger.c  logger.h
src/parser/: Makefile.am  parser.c  parser.h  parser_boucle.c  parser_command.c  parser_if.c  parser_list.c  parser_loop.c  parser_redir.c
src/utils/: Makefile.am
src/utils/ast/: ast.c  ast.h  ast_print.c
src/utils/list/: list.c  list.h
src/utils/stack/: stack.c  stack.h
src/utils/string/: string.c  string.h
src/utils/variables/: variables.c  variables.h
tests/: .gitignore  Makefile.am  builtins_tests.sh  failure.yaml  launch_tests.py  launch_tests.sh  script.sh  script2.sh  script4.sh  test.sh  testsIo  testsLogger  tests_io.c  tests_logger.c
tests/tests_files/: ast_evaluation.yaml  ast_test.yaml  builtin_tests.yaml  errors.yaml  expansion_tests.yaml  redirection_tests.yaml  scripts.yaml  wont_be_fixed_but_coverage.yaml  wtf_tests.yaml
